tests/machine/x/fs/load_yaml.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/load_yaml.fs(4,6): error FS0039: The namespace or module 'YamlDotNet' is not defined

/workspace/mochi/tests/machine/x/fs/load_yaml.fs(19,47): error FS0039: The value or constructor 'DeserializerBuilder' is not defined

/workspace/mochi/tests/machine/x/fs/load_yaml.fs(19,151): error FS0072: Lookup on object of indeterminate type based on information prior to this program point. A type annotation may be needed prior to this program point to constrain the type of the object. This may allow the lookup to be resolved.
