tests/machine/x/fs/load_yaml.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:43Z
open System
open System.IO
open YamlDotNet.Serialization

type Anon1 = {
    name: obj
    email: obj
}
type Anon2 = {
    name: string
    email: string
}
type Person = {
    mutable name: string
    mutable age: int
    mutable email: string
}
let people: Person list = (let deserializer = DeserializerBuilder().Build() in let yamlText = File.ReadAllText("../interpreter/valid/people.yaml") in deserializer.Deserialize<Person list>(yamlText))
let adults: Anon2 list = [ for p in people do if p.age >= 18 then yield { name = p.name; email = p.email } ]
for a in adults do
    printfn "%s" (String.concat " " [string a.name; string a.email])
